Added link to docs.

--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -58,6 +58,7 @@ header
 							p set sike to alert you with a specific message every two hours.
 							pre
 								code sike --interval 2h --message "Go grab a coffee"
+					p refer to the <a href="https://github.com/jh3y/sike" target="_blank">docs</a> for how to use sike.
 					.gbtns.text-center
 						iframe(src = "http://ghbtns.com/github-btn.html?user=jh3y&repo=sike&type=watch&count=true", allowtransparency="true", frameborder="0", scrolling="0", width="90px", height="20")
 						iframe(src = "http://ghbtns.com/github-btn.html?user=jh3y&repo=sike&type=fork&count=true", allowtransparency="true", frameborder="0", scrolling="0", width="90px", height="20")
