--- a/src/documents/index.html.jade
+++ b/src/documents/index.html.jade
@@ -14,7 +14,7 @@ header
 			.col-md-12
 				.col-md-6
 					h3.text-center install
-					pre
+					pre.text-center
 						code npm install -g sike
 					h3.text-center what is sike?
 					p.
@@ -26,10 +26,11 @@ header
 						hours have passed. You may have lost track of time and actually wanted to get something else done but now you've lost that time etc.
 					p.
 						Also if you spend a lot of time rooted to one position it's not particularly good for your body, you need to get up a move every once in a
-						while. This could help if you suffer with joint issues or back pain, by simply just reminding you, "Hey get up and touch your toes for a
-						second so you don't stiffen up!".
+						while. A little reminder could help you out.
 					p.
-						it's something that I personally find useful and maybe somebody else will.
+						sike will alert you at given intervals, times or durations prompting you to get up and move about a bit or go grab a drink etc.
+					p.
+						It's something that I personally find useful and maybe somebody else will.
 					h3.text-center who is it for?
 					p.
 						sike is for those that spend a long time behind a screen or at a workstation and get stuck in the zone. It's a handy scheduling/reminder
@@ -58,7 +59,7 @@ header
 							p set sike to alert you with a specific message every two hours.
 							pre
 								code sike --interval 2h --message "Go grab a coffee"
-					p refer to the <a href="https://github.com/jh3y/sike" target="_blank">docs</a> for how to use sike.
+					p.text-center refer to the <a href="https://github.com/jh3y/sike" target="_blank">docs</a> for how to use sike.
 					.gbtns.text-center
 						iframe(src = "http://ghbtns.com/github-btn.html?user=jh3y&repo=sike&type=watch&count=true", allowtransparency="true", frameborder="0", scrolling="0", width="90px", height="20")
 						iframe(src = "http://ghbtns.com/github-btn.html?user=jh3y&repo=sike&type=fork&count=true", allowtransparency="true", frameborder="0", scrolling="0", width="90px", height="20")
