--- a/src/files/css/style.css
+++ b/src/files/css/style.css
@@ -5,12 +5,19 @@ body {
   color: #FFF;
   font-size: 16px;
 }
+pre {
+  background-color: #333;
+  color: #E74C3C;
+}
 h1 {
   font-size: 120px;
 }
 img {
   width: 500px;
   margin: 40px auto;
+}
+a {
+  color: #E74C3C;
 }
 .gbtns {
   padding: 40px 0 40px 0;
